Fix search box on Jenkins 2.222+ (fixes #18)
- Hide the overlapping search icon
- Additionally removes most rules concerning header hight. This is a
  minor "regression" for older Jenkins versions, but fixes padding on
  newer Jenkins versions

--- a/less/style.less
+++ b/less/style.less
@@ -41,19 +41,16 @@ h3 {
 }
 
 #header {
-  height: 45px;
   background-color: @color-primary;
   text-transform: uppercase;
   z-index: 1030;
   letter-spacing: 1px;
-  padding: 3px;
   //Custom logo - path here
   //background: url('logo.png') no-repeat, @color-primary;
   //background-size: auto 45px, cover; 
 
   .login {
     top: inherit;
-    margin-top: 2px;
     a {
       font-size: 10px;
     }
@@ -69,19 +66,17 @@ h3 {
     //}
   }
 
-  .searchbox {
-    padding: 2px 10px;
-    text-transform: none;
-  }
-
   #search-box {
     background: darken(@color-primary, 10%);
-    padding-left: 5px;
+    padding-left: 0.5rem;
     border-radius: 3px;
-    height: 34px;
     border: 0;
     box-shadow: none;
     color: @color-white;
+  }
+
+  .main-search__icon-leading {
+    display: none;
   }
 }
 
